--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,2 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 @import "tailwindcss";
+
+h1, h2, h3 {
+   font-family: 'Cabin', sans-serif;
+}
+
+h4, h5 {
+   font-family: 'Alumni Sans', sans-serif;
+}
+
+h6 {
+   font-family: 'Amiri', serif;
+}
