--- a/frontend/src/app/features/home/pages/home-page/home-page.html
+++ b/frontend/src/app/features/home/pages/home-page/home-page.html
@@ -1,6 +1,6 @@
-<main class="h-full w-full bg-[#F5EFDB] flex flex-col">
+<main class="h-full w-full bg-backgroundbeige flex flex-col">
    <div class="h-1/3 flex justify-center items-center">
-      <h1 class="text-[#778154] text-8xl">CATALOGUED</h1>
+      <h1 class="text-bookolive text-8xl">CATALOGUED</h1>
    </div>
    <div class="h-2/3 flex items-center justify-center">
       
