Skapa header (issue #51)

--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,6 +1,9 @@
 
-<main class="h-screen w-screen">
-   <app-home-page />
+<main class="h-screen w-screen flex flex-col">
+   <app-header />
+   <app-main-content class="flex-1">
+      <app-home-page class="h-full" />
+   </app-main-content>
 </main>
 
 
