--- a/frontend/src/app/features/header/components/burger-menu/burger-menu.html
+++ b/frontend/src/app/features/header/components/burger-menu/burger-menu.html
@@ -1,7 +1,7 @@
-<div class="space-y-[5px] cursor-pointer mr-8 p-2" (click)="toggleMenu()">
-  <div class="w-6 h-[3px] bg-black rounded-3xl"></div>
-  <div class="w-6 h-[3px] bg-black rounded-3xl"></div>
-  <div class="w-6 h-[3px] bg-black rounded-3xl"></div>
+<div class="space-y-[5px] cursor-pointer p-2" (click)="toggleMenu()">
+  <div class="w-6 h-[3px] bg-backgroundbeige rounded-3xl"></div>
+  <div class="w-6 h-[3px] bg-backgroundbeige rounded-3xl"></div>
+  <div class="w-6 h-[3px] bg-backgroundbeige rounded-3xl"></div>
 </div>
 
 @if (isOpen) {
@@ -9,12 +9,12 @@
 }
 
 <div
-   class="flex flex-col items-center fixed top-0 right-0 h-full w-[25rem] z-50 transition-transform duration-300 bg-{{ bgColor }}"
+   class="flex flex-col items-center fixed top-0 left-0 h-full w-[25rem] z-50 transition-transform duration-300 bg-{{ bgColor }}"
    [class.translate-x-0]="isOpen"
-   [class.translate-x-full]="!isOpen"
+   [class.-translate-x-full]="!isOpen"
 >
-   <div class="flex w-full">
-      <div class="mt-5 ml-7 cursor-pointer" (click)="closeMenu()">X</div>
+   <div class="flex w-full justify-end">
+      <div class="mt-5 mr-7 cursor-pointer" (click)="closeMenu()">X</div>
    </div>
    <div class="w-full flex flex-col items-center" (click)="closeMenuOnLinkClick($event)">
       <ng-content></ng-content>
