Implementera router (issue #47)

--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,10 +1,7 @@
 
 <main class="h-screen w-screen flex flex-col">
    <app-header />
-   <app-main-content class="flex-1">
-      <app-home-page class="h-full" />
-   </app-main-content>
+   <app-main-content class="flex-1 h-full" />
+      <!-- <app-home-page class="h-full" /> -->
+   <!-- </app-main-content> -->
 </main>
-
-
-<router-outlet />
