--- a/frontend/src/app/features/header/components/header/header.html
+++ b/frontend/src/app/features/header/components/header/header.html
@@ -3,7 +3,7 @@
       <app-burger-menu backgroundColor="backgroundbeige" class="mr-40">
          <a routerLink="/" class="text-2xl">Start</a>
       </app-burger-menu>
-      <a routerLink="/shelf" class="text-3xl text-backgroundbeige mr-40">BOKHYLLA</a>
+      <a routerLink="/books" class="text-3xl text-backgroundbeige mr-40">BOKHYLLA</a>
       <a routerLink="/scan" class="text-3xl text-backgroundbeige mr-40">SKANNA</a>
       <a routerLink="/search" class="text-3xl text-backgroundbeige">SÖK</a>
    </div>
