--- a/frontend/src/app/features/home/pages/home-page/home-page.html
+++ b/frontend/src/app/features/home/pages/home-page/home-page.html
@@ -1,3 +1,4 @@
+<div class="h-full">
    <div class="h-1/3 flex justify-center items-center">
       <h1 class="text-bookolive text-8xl">CATALOGUED</h1>
    </div>
@@ -6,3 +7,4 @@
       <app-rounded-square [title]="'Senast tillagda'" class="mr-10" />
       <app-rounded-square [title]="'Läser just nu'" />
    </div>
+</div>   
