--- a/frontend/src/app/shared/components/main-content/main-content.html
+++ b/frontend/src/app/shared/components/main-content/main-content.html
@@ -1,3 +1,5 @@
 <main class="h-full w-full bg-backgroundbeige flex flex-col">
-   <ng-content></ng-content>
+   <div class="h-full">
+      <router-outlet />
+   </div>
 </main>
