påbörjade vy för att visa alla böcker (issue #48)

--- a/frontend/src/app/features/books/pages/all-books/all-books.html
+++ b/frontend/src/app/features/books/pages/all-books/all-books.html
@@ -1,1 +1,24 @@
-<p>all-books works!</p>
+<div class="flex-1 mx-30 mt-25">
+   <h1 class="text-5xl font-bold text-bookolive">BOKSAMLING</h1>
+   <div class="flex justify-between mt-10">
+      <div class="flex">
+         <div class="flex items-center justify-center">
+            <h5 class="text-3xl mr-5 text-headerbrown font-medium">sortering</h5>
+         </div>
+         <div class="flex items-center justify-center">
+            <h5 class="text-3xl mr-5 text-headerbrown font-medium">format</h5>
+         </div>
+         <div class="flex items-center justify-center">
+            <h5 class="text-3xl mr-5 text-headerbrown font-medium">filtrering</h5>
+         </div>
+      </div>
+      <div class="rounded-full bg-[#EEE7D3] text-headerbrown p-3 w-100">
+         <i class="fa-solid fa-magnifying-glass ml-2"></i>
+         <input type="text" placeholder="SÖK BOK ELLER FÖRFATTARE" class="bg-transparent border-none outline-none w-8/10 ml-3" />
+      </div>
+   </div>
+
+   <div class="flex flex-wrap">
+
+   </div>
+</div>
