--- a/frontend/src/app/shared/components/main-content/main-content.html
+++ b/frontend/src/app/shared/components/main-content/main-content.html
@@ -1,5 +1,5 @@
 <main class="h-full w-full bg-backgroundbeige flex flex-col">
-   <div class="h-full">
+   <div class="h-full flex flex-col">
       <router-outlet />
    </div>
 </main>
