lade till delar i bokgalleri-vy

--- a/frontend/src/app/features/books/pages/all-books/all-books.html
+++ b/frontend/src/app/features/books/pages/all-books/all-books.html
@@ -19,6 +19,8 @@
    </div>
 
    <div class="flex flex-wrap">
-
+      @for (book of books(); track book.id) {
+         
+      }
    </div>
 </div>
