Skapa vy för att visa alla böcker (issue #48)

--- a/frontend/src/app/features/books/pages/all-books/all-books.html
+++ b/frontend/src/app/features/books/pages/all-books/all-books.html
@@ -20,7 +20,7 @@
 
    <div class="flex flex-wrap">
       @for (book of books(); track book.id) {
-         
+         <app-book-card [book]="book"></app-book-card>
       }
    </div>
 </div>
