Skapa vy för att visa alla böcker (issue #48)

--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,7 +1,7 @@
 
 <main class="h-screen w-screen flex flex-col">
    <app-header />
-   <app-main-content class="flex-1 h-full" />
+   <app-main-content class="flex-1 overflow-hidden" />
       <!-- <app-home-page class="h-full" /> -->
    <!-- </app-main-content> -->
 </main>
