--- a/frontend/src/app/features/books/pages/all-books/all-books.html
+++ b/frontend/src/app/features/books/pages/all-books/all-books.html
@@ -19,8 +19,10 @@
    </div>
 
    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4 mt-5 overflow-scroll h-full">
-      @for (book of books(); track book.id) {
-         <app-book-card [book]="book"></app-book-card>
+      @if (books$ | async; as books ) {
+         @for (book of books; track book.id) {
+            <app-book-card [book]="book"></app-book-card>
+         }
       }
    </div>
 </div>
