--- a/frontend/src/app/features/books/pages/book-page/book-page.html
+++ b/frontend/src/app/features/books/pages/book-page/book-page.html
@@ -1,7 +1,7 @@
 @if (book$ | async; as book) {
    <div class="flex justify-center items-center h-full">
       <div class="flex w-3/4 h-full items-center">
-         <div class="h-60/100 flex">
+         <div class="h-60/100 flex flex-2 justify-center">
             <img [src]="book.coverLink ? book.coverLink : 'book-cover-placeholder.png'" alt="Omslagsbild för {{ book.title }}" class="cursor-pointer h-full aspect-[2/3]">
             <div class="ml-10">
                <h1 class="text-6xl font-bold text-bookolive">{{ book.title }}</h1>
@@ -25,11 +25,30 @@
                   <p><span class="book-properties alumni-font">ANTAL exemplar:</span><span class="amiri-font text-2xl"> {{ book.copies ? book.copies : 'Ej angivet' }}</span></p>
                   <p><span class="book-properties alumni-font">BETYG:</span><span class="amiri-font text-2xl"> {{ book.rating ? book.rating : 'Inget betyg satt' }}</span></p>
                </div>
-               <app-button>Lägg till bok</app-button>
             </div>
 
             
          </div>
+         <div class="h-60/100 flex-1 flex justify-end">
+            <div class="flex flex-col h-full justify-end">
+               <app-button class="mb-auto">Redigera</app-button>
+               @if (booksByAuthor()) {
+                  <h1>Det funkar</h1>
+                  @if (booksByAuthor().length > book.author.length) {
+                     <div class="flex flex-col h-1/2">
+                        <h5>Annat av denna författare:</h5>
+                     </div>
+                     @for (bookInList of booksByAuthor(); track $index) {
+                        @if (bookInList.title != book.title) {
+                           <app-book-card [book]="bookInList"></app-book-card>
+                        }
+                     }
+                  }
+
+               }
+            </div>
+         </div>
+
       </div>
    </div>
 }
