--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -40,3 +40,5 @@ html, body {
 .book-properties {
    @apply text-headerbrown text-2xl font-semibold;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
