--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -42,3 +42,12 @@ html, body {
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.cdk-drop-list-dragging .cdk-drag {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.selectedItem {
+   background-color: #3b82f6;
+   color: white;
+}
