--- a/frontend/src/app/features/books/components/edit-book-form/edit-book-form.html
+++ b/frontend/src/app/features/books/components/edit-book-form/edit-book-form.html
@@ -1,31 +1,72 @@
-<form action="" class="grid grid-cols-2 m-20">
-   <label for="bookTitle">Titel:</label>
-   <input type="text" name="bookTitle" [defaultValue]="editedBook()!.title">
-   
-   <label for="bookAuthors">Författare:</label>
-   <app-array-input [items]="editedBook()!.author" [displayFn]="displayAuthor" [selectableItems]="allAuthors()"></app-array-input>
-
-   <label for="genre">Genre:</label>
-   <select name="genre" id="genre">
-      @for (genre of allGenres(); track $index) {
+<div class="flex justify-center">
+   <form [formGroup]="form" class="mx-20 my-10 w-1/2">
+      <div class="grid grid-cols-[auto_75%] gap-y-2 gap-x-5 [&>label]:justify-self-end">
+         <label for="bookTitle" class="self-center">Titel:</label>
+         <input type="text" name="bookTitle" formControlName="title" class="form-text-input">
          
-      }
-   </select>
-   
-   <label for="format">Format:</label>
-   <select name="format">
-      <option value="Inbunden">Inbunden</option>
-      <option value="Pocket">Pocket</option>
-      <option value="Danskt band">Danskt band</option>
-      <option value="Häftad">Häftad</option>
-   </select>
+         <label for="bookAuthors">Författare:</label>
+         <app-array-input formControlName="authors" [displayFn]="displayAuthor" [selectableItems]="allAuthors()"></app-array-input>
+      
+         <label for="genre">Genre:</label>
+         <select formControlName="genre" id="genre">
+            @for (genre of allGenres(); track $index) {
+               <option [ngValue]="genre.id">{{ genre.name }}</option>
+            }
+         </select>
+         
+         <label for="yearWritten" class="self-center">Utgivningsår:</label>
+         <input type="number" formControlName="yearWritten" [max]="this.getCurrentYear()" class="form-text-input">
+      
+         <label for="language">Språk:</label>
+         <select formControlName="language">
+            @for (language of allLanguages(); track $index) {
+               <option [ngValue]="language.id">{{ language.name }}</option>
+            }
+         </select>
+      
+         <label for="language">Originalspråk:</label>
+         <select formControlName="originalLanguage">
+            @for (language of allLanguages(); track $index) {
+               <option [ngValue]="language.id">{{ language.name }}</option>
+            }
+         </select>
+         
+         <label for="format">Format:</label>
+         <select formControlName="format">
+            <option value="Inbunden">Inbunden</option>
+            <option value="Pocket">Pocket</option>
+            <option value="Danskt band">Danskt band</option>
+            <option value="Häftad">Häftad</option>
+         </select>
+      
+         <label for="isbn" class="self-center">ISBN:</label>
+         <input formControlName="isbn" class="form-text-input" >
+      
+         <label for="status">Status:</label>
+         <select formControlName="status">
+            <option [value]="null" disabled>Välj status...</option>
+            <option value="Läst">Läst</option>
+            <option value="Ej läst">Ej läst</option>
+            <option value="Utlånad">Utlånad</option>
+         </select>
+      
+         <label for="copies" class="self-center">Antal exemplar:</label>
+         <input type="number" formControlName="copies" min="1" class="form-text-input">
+      
+         <label for="coverLink" class="self-center">Länk till omslag:</label>
+         <input type="text" formControlName="coverLink" class="form-text-input">
+      
+         <label for="rating">Betyg:</label>
+         <div>
+            <input formControlName="rating" type="range" min="0" max="10" step="0.1">
+            <span>{{ form.get('rating')?.value ?? "Ej betygsatt" }}</span>
+         </div>
+      </div>
 
-   <label for="isbn">ISBN:</label>
-   <input name="isbn" [defaultValue]="editedBook()!.isbn">
-
-   <label for="yearWritten">Utgivningsår:</label>
-   <input type="number" name="yearWritten" [defaultValue]="editedBook()!.yearWritten">
-
-   <label for="numberOfCopies">Antal exemplar:</label>
-   <input type="number" name="numberOfCopies" [defaultValue]="editedBook()!.copies" min="1">
-</form>
+      <div class="flex justify-around mt-10">
+         <app-button (click)="closeEditView()">Avbryt</app-button>
+         <app-button (click)="resetForm()">Återställ</app-button>
+         <app-button (click)="save()">Spara</app-button>
+      </div>
+   </form>
+</div>
