--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -51,3 +51,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
    background-color: #3b82f6;
    color: white;
 }
+
+@layer components {
+   .form-text-input {
+      @apply border border-gray-300 rounded-lg px-3 py-1 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 text-gray-900 bg-white
+   } 
+}
