--- a/frontend/src/app/features/header/components/header/header.html
+++ b/frontend/src/app/features/header/components/header/header.html
@@ -1,10 +1,11 @@
 <header class="w-full h-30 bg-headerbrown flex justify-between items-center">
    <div class="ml-20 w-1/2 flex">
-      <app-burger-menu backgroundColor="backgroundbeige" class="mr-40">
+      <app-burger-menu backgroundColor="backgroundbeige" class="mr-30">
          <a routerLink="/" class="text-2xl">Start</a>
       </app-burger-menu>
-      <a routerLink="/books" class="text-3xl text-backgroundbeige mr-40">BOKHYLLA</a>
-      <a routerLink="/scan" class="text-3xl text-backgroundbeige mr-40">SKANNA</a>
+      <a routerLink="/books" class="text-3xl text-backgroundbeige mr-30">BOKHYLLA</a>
+      <a routerLink="/add" class="text-3xl text-backgroundbeige mr-30">LÄGG TILL</a>
+      <a routerLink="/scan" class="text-3xl text-backgroundbeige mr-30">SKANNA</a>
       <a routerLink="/search" class="text-3xl text-backgroundbeige">SÖK</a>
    </div>
 </header>
