--- a/frontend/src/app/shared/pages/add-view/add-view.html
+++ b/frontend/src/app/shared/pages/add-view/add-view.html
@@ -16,7 +16,7 @@
    
    @switch (selectedView()) {
       @case ('book') {
-         <app-add-book />
+         <app-add-book class="w-8/10 flex justify-center"/>
       }
    
       @case ('author') {
