--- a/frontend/src/app/shared/pages/add-view/add-view.html
+++ b/frontend/src/app/shared/pages/add-view/add-view.html
@@ -16,19 +16,19 @@
    
    @switch (selectedView()) {
       @case ('book') {
-         <app-add-book class="w-8/10 flex justify-center"/>
+         <app-add-book class="w-8/10 flex justify-center" />
       }
    
       @case ('author') {
-         <app-add-author />
+         <app-add-author class="w-8/10 flex justify-center" />
       }
    
       @case ('genre') {
-         <app-add-genre />
+         <app-add-genre class="w-8/10 flex justify-center" />
       }
    
       @case ('language') {
-         <app-add-language />
+         <app-add-language class="w-8/10 flex justify-center" />
       }
    }
 </div>
