--- a/frontend/src/app/features/authors/components/add-author/add-author.html
+++ b/frontend/src/app/features/authors/components/add-author/add-author.html
@@ -1,1 +1,55 @@
-<p>add-author works!</p>
+<div class="w-1/2 h-3/4 mr-30">
+   <form [formGroup]="form">
+      <div class="grid grid-cols-[auto_75%] gap-y-2 gap-x-5 [&>label]:justify-self-end">
+         <div></div>
+         <h1 class="text-5xl font-bold text-bookolive mb-5">LÄGG TILL FÖRFATTARE</h1>
+
+         <label for="firstName" class="self-center">Förnamn:</label>
+         <input type="text" formControlName="firstName" class="form-text-input">
+
+         @if (form.get('firstName')?.invalid && form.get('firstName')?.touched) {
+            @if (form.get('firstName')?.errors?.['required']) {
+               <div></div>
+               <span class="text-red-500">Förnamn är obligatorisk. Om bara ett namn finns, sätt det som förnamn.</span>
+            }
+         }
+         
+         <label for="lastName">Efternamn:</label>
+         <input type="text" formControlName="lastName" class="form-text-input">
+
+         <label for="gender">Kön:</label>
+         <select formControlName="gender">
+            <option value="Kvinna">Kvinna</option>
+            <option value="Man">Man</option>
+            <option value="Annat">Annat</option>
+         </select>
+         
+         <label for="birthYear" class="self-center">Födelseår:</label>
+         <input type="number" formControlName="birthYear" [max]="this.getCurrentYear()" class="form-text-input">
+
+         @if (form.get('birthYear')?.invalid) {
+            @if (form.get('birthYear')?.errors?.['max']) {
+               <div></div>
+               <span class="text-red-500">Året kan inte vara i framtiden.</span>
+            }
+         }
+      
+         <label for="country">Land:</label>
+         <select formControlName="country">
+            @for (country of allCountries(); track $index) {
+               <option [ngValue]="country.id">{{ country.name }}</option>
+            }
+         </select>
+      
+         <label for="imageLink">Bildlänk:</label>
+         <input type="text" formControlName="imageLink" class="form-text-input">
+
+         <div></div>
+         <div class="flex justify-start gap-10 mt-5">
+            <app-button (click)="resetForm()">Återställ</app-button>
+            <app-button (click)="save()">Spara</app-button>
+         </div>
+      </div>
+
+   </form>
+</div>
