Fixa så enter funkar för att spara resurs (issue #88)

--- a/frontend/src/app/features/authors/components/add-author/add-author.html
+++ b/frontend/src/app/features/authors/components/add-author/add-author.html
@@ -46,8 +46,8 @@
 
          <div></div>
          <div class="flex justify-start gap-10 mt-5">
-            <app-button (click)="resetForm()">Återställ</app-button>
-            <app-button (click)="save()">Spara</app-button>
+            <app-button type="reset" (click)="resetForm()">Återställ</app-button>
+            <app-button type="submit" (click)="save()">Spara</app-button>
          </div>
       </div>
 
