--- a/frontend/src/app/shared/components/button/button.html
+++ b/frontend/src/app/shared/components/button/button.html
@@ -1,3 +1,3 @@
-<button class="px-7.5 py-1 bg-bookolive text-white text-xl font-normal rounded-full alumni-font uppercase cursor-pointer hover:bg-bookolive-dark">
+<button [attr.type]="type || 'button'" class="px-7.5 py-1 bg-bookolive text-white text-xl font-normal rounded-full alumni-font uppercase cursor-pointer hover:bg-bookolive-dark">
    <ng-content></ng-content>
 </button>
