--- a/frontend/src/app/features/books/components/add-book/add-book.html
+++ b/frontend/src/app/features/books/components/add-book/add-book.html
@@ -1,11 +1,11 @@
 <div class="w-1/2 h-3/4 mr-30">
-   <form [formGroup]="form">
+   <form [formGroup]="form" (ngSubmit)="save()">
       <div class="grid grid-cols-[auto_75%] gap-y-2 gap-x-5 [&>label]:justify-self-end">
          <div></div>
          <h1 class="text-5xl font-bold text-bookolive mb-5">LÄGG TILL BOK</h1>
 
          <label for="bookTitle" class="self-center">Titel:</label>
-         <input type="text" name="bookTitle" formControlName="title" class="form-text-input">
+         <input type="text" name="bookTitle" formControlName="title" class="form-text-input" id="bookTitle">
 
          @if (form.get('title')?.invalid && form.get('title')?.touched) {
             @if (form.get('title')?.errors?.['required']) {
@@ -15,10 +15,10 @@
          }
          
          <label for="bookAuthors">Författare:</label>
-         <app-array-input formControlName="authors" [displayFn]="displayAuthor" [selectableItems]="allAuthors()"></app-array-input>
+         <app-array-input formControlName="authors" [displayFn]="displayAuthor" [selectableItems]="allAuthors()" id="bookAuthors"></app-array-input>
       
-         @if (form.get('author')?.invalid && form.get('author')?.touched) {
-            @if (form.get('author')?.errors?.['required'] || form.get('author')?.errors?.['minLength']) {
+         @if (form.get('authors')?.invalid && form.get('authors')?.touched) {
+            @if (form.get('authors')?.errors?.['required'] || form.get('authors')?.errors?.['minLength']) {
                <div></div>
                <span class="text-red-500">Du måste välja minst en författare.</span>
             }
@@ -32,7 +32,7 @@
          </select>
          
          <label for="yearWritten" class="self-center">Utgivningsår:</label>
-         <input type="number" formControlName="yearWritten" [max]="this.getCurrentYear()" class="form-text-input">
+         <input type="number" formControlName="yearWritten" [max]="this.getCurrentYear()" class="form-text-input" id="yearWritten">
 
          @if (form.get('yearWritten')?.invalid) {
             @if (form.get('yearWritten')?.errors?.['max']) {
@@ -42,21 +42,21 @@
          }
       
          <label for="language">Språk:</label>
-         <select formControlName="language">
+         <select formControlName="language" id="language">
             @for (language of allLanguages(); track $index) {
                <option [ngValue]="language.id">{{ language.name }}</option>
             }
          </select>
       
          <label for="originalLanguage">Originalspråk:</label>
-         <select formControlName="originalLanguage">
+         <select formControlName="originalLanguage" id="originalLanguage">
             @for (language of allLanguages(); track $index) {
                <option [ngValue]="language.id">{{ language.name }}</option>
             }
          </select>
          
          <label for="format">Format:</label>
-         <select formControlName="format">
+         <select formControlName="format" id="format">
             <option value="Inbunden">Inbunden</option>
             <option value="Pocket">Pocket</option>
             <option value="Danskt band">Danskt band</option>
@@ -64,7 +64,7 @@
          </select>
       
          <label for="isbn" class="self-center">ISBN:</label>
-         <input formControlName="isbn" class="form-text-input" >
+         <input formControlName="isbn" class="form-text-input" id="isbn">
 
          @if (form.get('isbn')?.invalid && form.get('isbn')?.touched) {
             @if (form.get('isbn')?.errors?.['pattern']) {
@@ -74,12 +74,12 @@
          }
       
          <label for="coverLink" class="self-center">Länk till omslag:</label>
-         <input type="text" formControlName="coverLink" class="form-text-input">
+         <input type="text" formControlName="coverLink" class="form-text-input" id="coverLink">
 
          <div></div>
          <div class="flex justify-start gap-10 mt-5">
             <app-button type="reset" (click)="resetForm()">Återställ</app-button>
-            <app-button type="submit" (click)="save()">Spara</app-button>
+            <app-button type="submit">Spara</app-button>
          </div>
       </div>
 
